drew the rest of the owl

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Victor+Mono:wght@100;400;700&display=swap"
 			rel="stylesheet"
 		/>
 		%sveltekit.head%
@@ -25,8 +25,8 @@
 
 <style>
 	body {
-		background-color: #292726;
-		color: #fff5ee;
-		font-family: 'Inconsolata', monospace;
+		background-color: #151215;
+		color: #f0f0f0;
+		font-family: 'Victor Mono', monospace;
 	}
 </style>
